--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.2.0</version>
                 <configuration>
-                    <mainClass>com.cthiebaud.SnakeYAMLReadExample</mainClass>
+                    <mainClass>com.cthiebaud.SnakeYAMLBeanExample</mainClass>
                 </configuration>
             </plugin>
         </plugins>
