--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,23 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+    <!-- Project metadata -->
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.example</groupId>
-    <artifactId>snakeyaml-example</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>com.cthiebaud</groupId> <!-- Group ID -->
+    <artifactId>snakeyaml-example</artifactId> <!-- Artifact ID -->
+    <version>1.0-SNAPSHOT</version> <!-- Version -->
+
+    <!-- Project dependencies -->
     <dependencies>
         <dependency>
-            <groupId>org.yaml</groupId>
+            <!-- Dependency for SnakeYAML -->
+            <groupId>org.yaml</groupId> 
             <artifactId>snakeyaml</artifactId>
-            <version>2.2</version>
+            <version>2.2</version> 
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
