--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,19 @@
     <dependencies>
         <dependency>
             <!-- Dependency for SnakeYAML -->
-            <groupId>org.yaml</groupId> 
+            <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
-            <version>2.2</version> 
+            <version>2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.snakeyaml</groupId>
+            <artifactId>snakeyaml-engine</artifactId>
+            <version>2.7</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-yaml</artifactId>
+            <version>2.17.0</version>
         </dependency>
     </dependencies>
 
@@ -35,7 +45,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.cthiebaud.SnakeYAMLReadExample</mainClass>
+                            <mainClass>com.cthiebaud.yaml.snakeyaml.SnakeYAMLReadExample</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
